@@ -1108,6 +1108,7 @@
                                     <property name="pixbuf_column">0</property>
                                     <property name="row_spacing">3</property>
                                     <property name="column_spacing">3</property>
+                                    <property name="selection_mode">GTK_SELECTION_BROWSE</property>
                                   </widget>
                                 </child>
                               </widget>
